<resources>
    <string name="app_name">Educación Física Policía Chubut</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="jerarquia">Jerarquia</string>


    <string name="minimum_password">Contraseña demasiado corta, ingrese un mínimo de 6 carácteres!</string>
    <string name="auth_failed">Falló la autenticación, verifique su email y contraseña o registrese.</string>
    <string name="change_email">Cambiar email</string>
    <string name="change_password">cambiar contraseña</string>
    <string name="send_password_reset_email">Enviar email para resetear contraseña</string>
    <string name="remove_user">Eliminar usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="prompt_password">Contraseña</string>


    <string name="hint_email">Email</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_jerarquia">Jerarquia</string>
    <string name="hint_dependencia">Dependencia</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_new_email">Nuevo email</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Iniciar sesión</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_login2">Enviarme Mail</string>
    <string name="btn_link_to_register">No estás registrado? Registrate ahora!</string>
    <string name="btn_link_to_login">Ya estas registrado. Inicia sesión!</string>
    <string name="btn_forgot_password">Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Resetear contraseña</string>
    <string name="btn_back"><![CDATA[<< Regresar]]></string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Eliminar</string>
    <string name="btn_sign_out">Cerrar sesión</string>

    <string name="lbl_forgot_password">Olvidaste tu contraseña?</string>
    <string name="lbl_enviar_mail">Déjanos tus datos y te enviaremos un mail con tu usuario y contraseña</string>
    <string name="forgot_password_msg">Sólo necesitamos tu email de registro para enviarte las instrucciones para resetear tu contraseña.</string>
    <string name="logo">logo</string>
    <string name="validacion_nombre">Debe ingresar el nombre</string>
    <string name="validacion_apellido">Debe ingresar su apellido</string>
    <string name="validacion_jerarquia">Debe ingresar su jerarquia</string>
    <string name="validacion_dependencia">Debe ingresar su dependencia</string>
    <string name="validacion_email">Debe ingresar un mail válido</string>


    //Pantalla de presentación
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">OMITIR</string>
    <string name="start">ENTENDIDO</string>

    <string name="slide_1_title">Bienvenidos!!</string>
    <string name="slide_1_desc"> A la plataforma de Educación Física de la Policia de la Provincia del Chubut</string>

    <string name="slide_2_title">Rutinas</string>
    <string name="slide_2_desc">Rutinas por categorias y niveles</string>

    <string name="slide_3_title">Estiramientos</string>
    <string name="slide_3_desc">Los mejores ejercicios para estirar</string>

    <string name="slide_4_title">Exámenes</string>
    <string name="slide_4_desc">Toda la información sobre las fechas de exámen</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Policía del Chubut</string>
    <string name="nav_header_subtitle">Departamento de Educación Física Esquel</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_estiramientos">Estiramientos</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
