<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/degradado_fondo"
    tools:context=".Login.SignUpActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/degradado_fondo"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/logo"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_enviar_mail"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_transparent">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_nombre"
                    android:inputType="textCapWords"
                    android:textColor="@color/white"
                    android:autofillHints="@string/hint_nombre"
                    />

                <TextView
                    android:id="@+id/lblNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F60202"
                    android:text="@string/validacion_nombre"
                    android:visibility="gone"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_transparent">

                <EditText
                    android:id="@+id/apellido"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_apellido"
                    android:inputType="textCapWords"
                    android:textColor="@android:color/white"
                    android:autofillHints="@string/hint_apellido"
                    />

                <TextView
                    android:id="@+id/lblApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F60202"
                    android:text="@string/validacion_apellido"
                    android:visibility="gone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_transparent">

                <EditText
                    android:id="@+id/jerarquia"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_jerarquia"
                    android:inputType="textCapWords"
                    android:textColor="@android:color/white"
                    android:autofillHints="@string/hint_jerarquia"
                    />

                <TextView
                    android:id="@+id/lblJerarquia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F60202"
                    android:text="@string/validacion_jerarquia"
                    android:visibility="gone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_transparent">

                <EditText
                    android:id="@+id/dependencia"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_dependencia"
                    android:autofillHints="@string/hint_dependencia"
                    android:inputType="textCapWords"
                    android:textColor="@android:color/white"
                    />

                <TextView
                    android:id="@+id/lblDependencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F60202"
                    android:text="@string/validacion_dependencia"
                    android:visibility="gone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_transparent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@string/hint_email"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F60202"
                    android:text="@string/validacion_email"
                    android:visibility="gone"/>
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#E3C60E"
                android:text="@string/btn_login2"
                android:textColor="@android:color/black" />

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="30dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>